--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "hls.js": "^1.5.16",
+    "mediaelement": "^7.0.5",
+    "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
