--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "hls.js": "^1.5.16",
+    "js-cookie": "^3.0.5",
     "mediaelement": "^7.0.5",
     "plyr": "^3.7.8",
     "plyr-react": "^5.3.0",
@@ -20,7 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.28.0",
     "video.js": "^8.18.1"
   },
   "devDependencies": {
